<resources>
    <string name="app_name">ContactBook</string>
    <string name="edit">Edit</string>
    <string name="add_photo">Add Photo</string>
    <string name="search">Search</string>
    <string name="add_new_contact">Add new contact</string>
    <string name="create_contact">Create Contact</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="add_custom">Add a custom field</string>
    <string name="no_contacts">No Contacts</string>
</resources>