<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.contactedit.ContactEditFragment">

    <include
        android:id="@+id/appbar"
        layout="@layout/contact_edit_toolbar"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="48dp"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="48dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/first_name_text_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="24dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:layout_constraintEnd_toEndOf="@id/guideline_right"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/first_name"
                    android:textColor="@color/edit_text_color" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/last_name_text_layout"
                android:layout_width="0dp"
                android:layout_height="48dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_marginTop="16dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:layout_constraintEnd_toEndOf="@id/guideline_right"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toBottomOf="@id/first_name_text_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/last_name"
                    android:textColor="@color/edit_text_color"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_text_layout"
                android:layout_width="0dp"
                android:layout_height="48dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_marginTop="16dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:layout_constraintEnd_toEndOf="@id/guideline_right"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toBottomOf="@id/last_name_text_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/edit_text_color"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_number_text_layout"
                android:layout_width="0dp"
                android:layout_height="48dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_marginTop="16dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:layout_constraintEnd_toEndOf="@id/guideline_right"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toBottomOf="@id/email_text_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:textColor="@color/edit_text_color"/>

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:tint="@color/phone_color"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                app:layout_constraintBottom_toBottomOf="@+id/phone_number_text_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/phone_number_text_layout"
                app:srcCompat="@drawable/ic_add" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_custom"
                android:layout_marginTop="24dp"
                android:textStyle="bold"
                android:textColor="@color/custom_field_text_color"
                app:layout_constraintTop_toBottomOf="@id/phone_number_text_layout"
                app:layout_constraintStart_toStartOf="@id/guideline_left"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>